Add Check to CI

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -13,4 +13,6 @@ jobs:
       - name: Install
         run: npm install
       - name: Check
+        run: npm run check
+      - name: Lint Check
         run: npm run lint-check
