--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
+		"setup": "node scripts/reposetup.js",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
