--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint-fix": "npx eslint 'src/**/*.ts' --fix && prettier --write .",
-		"lint-check": "npx eslint 'src/**/*.ts' && prettier --check ."
+		"lint-fix": "npx eslint 'src/**/*.ts' --fix && prettier --write src/**/*.ts",
+		"lint-check": "npx eslint 'src/**/*.ts' && prettier --check src/**/*.ts"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.22.0",
