--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "lionweb-repo-admin-ui",
 	"private": true,
-	"version": "0.0.1",
+	"version": "0.1.0",
 	"type": "module",
 	"scripts": {
 		"setup": "node scripts/reposetup.js",
@@ -29,6 +29,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"release-it": "^18.1.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
