--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint-fix": "npx eslint 'src/**/*.ts' --fix && prettier --write src/**/*.ts",
-		"lint-check": "npx eslint 'src/**/*.ts' && prettier --check src/**/*.ts"
+		"lint-check": "npx eslint 'src/**/*.ts' && prettier --check src/**/*.ts",
+		"release": "release-it"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.22.0",
