--- a/security/oauth2-proxy.cfg
+++ b/security/oauth2-proxy.cfg
@@ -1,4 +1,4 @@
-provider = "oidc"
+provider = "keycloak-oidc"
 client_id = "adminui-client"
 client_secret = "RqwM3RDk0xw5kj4C6BSq12UkZVMoEfXS"
 cookie_secret = "a32byteslongsecret12345678901234" # Must be 32-bytes base64-encoded
@@ -11,3 +11,5 @@ http_address = "0.0.0.0:5174"
 email_domains = ["*"]
 skip_provider_button = true
 cookie_secure = false
+whitelist_domains=["localhost:8080"]
+# logout_url = "http://localhost:8080/realms/lwrepo/protocol/openid-connect/logout?redirect_uri=http://localhost:5174"
