--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@lionweb/repository-client": "file:scripts/repo-clone/packages/client/lionweb-repository-client-0.3.0.tgz",
 		"@lionweb/repository-shared": "file:scripts/repo-clone/packages/shared/lionweb-repository-shared-0.3.0.tgz",
 		"@types/jszip": "^3.4.0",
-		"jszip": "^3.10.1"
+		"jszip": "^3.10.1",
+		"keycloak-js": "^26.1.5"
 	}
 }
