Prevent database to be always re-created

--- a/docker/model-repository/my-server-local-config.json
+++ b/docker/model-repository/my-server-local-config.json
@@ -5,7 +5,7 @@
 		"bodyLimit": "500mb"
 	},
 	"startup": {
-		"createDatabase": "always",
+		"createDatabase": "if-not-exists",
 		"createRepositories": [
 			{
 				"name": "default",
